--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,13 @@
     <title>ElasticSearch in WebVR</title>
     <meta name="description" content="A-Frame WebVR meets ElasticSearch">
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
-    <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.12.4/dist/aframe-extras.min.js"></script>
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.12.4/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.min.js"></script>
     <script src="https://cdn.rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v2.1.0/dist/aframe-physics-system.min.js"></script>
+    <script src="https://unpkg.com/d3"></script>
+    <script src="vr/elastic-vr.js"></script>
+
   </head>
   <body>
     <a-scene physics>
