add a nice texture for the es servers

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
   </head>
   <body>
     <a-scene physics>
+        <a-assets>
+          <img id="estexture" src="assets/blueMetal.jpg">
+        </a-assets>
         <a-entity environment="preset: tron;
         dressingAmount: 0;
         ground: flat;
