--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v2.1.0/dist/aframe-physics-system.min.js"></script>
     <script src="https://unpkg.com/aframe-layout-component"></script>
+    <script src="https://unpkg.com/aframe-log-component/dist/aframe-log-component.min.js"></script>
     <script src="https://unpkg.com/d3"></script>
     <script src="vr/elastic-vr.js"></script>
 
@@ -33,11 +34,12 @@
       <!-- Add a static physics plane-->
       <a-plane position="0 -.1 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4" static-body></a-plane>
 
-      <!-- log -->
-      <a-log channel="eslog"></a-log>
+
 
       <!-- es cluster -->
       <a-entity id="escluster" position="0 1 -5" layout="type: line; margin:1.3;" dynamic-body="mass:500;linearDamping:.9;angularDamping:.9;">
+        <!-- log -->
+        <a-log channel="eslog" text="align:left;" ></a-log>
       </a-entity>
 
       <a-locomotor>
