add input/keyboard controls html

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,10 @@
     <script src="https://unpkg.com/aframe-layout-component"></script>
     <script src="https://unpkg.com/aframe-log-component/dist/aframe-log-component.min.js"></script>
     <script src="https://unpkg.com/d3"></script>
+    <script src="js/aframe-material.min.js"></script>
+    <script type="text/javascript">
+      AFRAME.ASSETS_PATH = "./assets";
+    </script>
     <script src="vr/elastic-vr.js"></script>
 
   </head>
