position the keyboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
 
       <!-- BEGIN INPUTS/KEYBOARD -->
-      <a-keyboard></a-keyboard>
+      <a-keyboard position="-4 .3 -4"></a-keyboard>
       <a-input position="-4 1.1 -5" placeholder="searchCriteria" color="black" width="1.7" disabled='false' value=''></a-input>
 
       <!-- END INPUTS/KEYBOARD -->
